--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cloudinary": "^1.41.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
+    "emoji-picker-element": "^1.21.0",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.1",
     "express-flash": "^0.0.2",
