--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-fileupload": "^1.4.1",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
+    "file-upload-with-preview": "^6.0.2",
     "md5": "^2.3.0",
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
@@ -28,7 +29,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.8",
     "pug": "^3.0.2",
-    "socket.io": "^4.7.2",
+    "socket.io": "^4.7.3",
     "streamifier": "^0.1.1",
     "tinymce": "^6.7.0"
   },
